--- a/src/main/resources/templates/gift.html
+++ b/src/main/resources/templates/gift.html
@@ -39,11 +39,11 @@
           <label>Rating:</label>
           <b><label th:text="${averageRating}"></label></b>
       </div>
-      <div class="form-group">
+      <div sec:authorize="hasAuthority('RATE_GIFT')" class="form-group">
           <label>My rating:</label>
           <b><label th:text="${userRating}"></label></b>
       </div>
-      <div class="form-group">
+      <div sec:authorize="hasAuthority('RATE_GIFT')" class="form-group">
           <input type="radio" id="1" name="rating" value="1">
           <label for="1">1</label>
           <input type="radio" id="2" name="rating" value="2">
@@ -58,7 +58,7 @@
       </div>
       </form>
   </div>
-  <div class="mt-2 mb-2">
+  <div class="mt-2 mb-2" sec:authorize="hasAuthority('BUY_GIFT')" >
       <a th:href="@{'/buy-gift/' + ${gift.id}}">Buy gift</a>
   </div>
   <h2 id="gift-comments">Gift comments</h2>
@@ -66,7 +66,7 @@
     <b th:text="${comment.personName}"></b>
     <div class="form-control" th:id="${iter.index}" th:text="${comment.comment}" disabled></div>
   </div>
-  <div class="form-group">
+  <div sec:authorize="hasAuthority('ADD_COMMENT')"  class="form-group">
     <label for="addComment">Add comment</label>
     <textarea class="form-control" id="addComment" rows="3" placeholder="Comment..."></textarea>
     <button id="createComment" class="btn btn-primary mt-2">Create comment</button>
