--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -50,7 +50,7 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/gifts}">Gifts</a>
             </li>
-            <li class="nav-item">
+            <li sec:authorize="hasAuthority('VIEW_PERSONS_LIST')" class="nav-item">
                 <a class="nav-link" th:href="@{/persons}">Users</a>
             </li>
         </ul>
