Dodao logovanje i auditing

--- a/src/main/resources/templates/gift.html
+++ b/src/main/resources/templates/gift.html
@@ -79,22 +79,25 @@
   <script>
     window.addEventListener('load', function () {
 
-        document.getElementById("rateGift").addEventListener("click", function () {
-            const rating = document.querySelector('input[name="rating"]:checked').value;
-            fetch('/ratings', {
-                method: 'POST',
-                body: JSON.stringify({
-                    giftId: giftID,
-                    rating: rating
-                }),
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            }).then(function () {
-                console.log(window.location)
-                window.location.reload();
+        let rateGiftElem = document.getElementById("rateGift");
+        if(rateGiftElem != null) {
+            rateGiftElem.addEventListener("click", function () {
+                const rating = document.querySelector('input[name="rating"]:checked').value;
+                fetch('/ratings', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        giftId: giftID,
+                        rating: rating
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                }).then(function () {
+                    console.log(window.location)
+                    window.location.reload();
+                });
             });
-        });
+        }
 
       document.getElementById("createComment").addEventListener("click", function () {
         const comment = document.getElementById("addComment").value;
