--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -49,7 +49,7 @@
                     <p>Are you sure you want to delete this user?</p>
                 </div>
                 <div class="modal-footer">
-                    <input type="hidden" name="csrfToken" th:value="${CSRF_TOKEN}">
+                    <input type="hidden" name="csrfToken" th:value="${CSRF_TOKEN}" id="deleteToken">
                     <button type="submit" class="btn btn-danger" id="deleteUser">Delete</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 </div>
@@ -61,9 +61,18 @@
         window.addEventListener('load', function() {
             document.getElementById('deleteUser').addEventListener('click', function () {
                 const personId = document.getElementById('id').value;
+                const csrfToken = document.getElementById('deleteToken').value;
+
+                const formData = new FormData();
+                formData.append('csrfToken', csrfToken);
 
                 fetch('/persons/' +  + personId, {
-                    method: 'DELETE'
+                    method: 'DELETE',
+                    body: new URLSearchParams(formData).toString(),
+                    credentials: 'include',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded'
+                    }
                 }).then(function() { window.location.href = '/persons'; });
             });
         });
